# FrontierML

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  _config.yml  _toc.yml  intro.md  pyproject.toml  references.bib  requirements.txt
.github/instructions/: master.instructions.md
notebooks/: 00_index.ipynb  01_data_collection.ipynb  01_linear_regression.ipynb  02_linear_regression.ipynb  03_logistic_regression.ipynb  04_decision_trees.ipynb  05_random_forest.ipynb  06_support_vector_machines.ipynb  07_neural_networks.ipynb  08_k_means_clustering.ipynb  09_hierarchical_clustering.ipynb  10_principal_component_analysis.ipynb  11_naive_bayes.ipynb  12_k_nearest_neighbors.ipynb  13_gradient_boosting.ipynb  14_association_rule_mining.ipynb  15_dbscan_clustering.ipynb  16_linear_discriminant_analysis.ipynb  17_gaussian_mixture_models.ipynb  18_adaboost.ipynb  19_q_learning.ipynb  20_autoencoders.ipynb  21_convolutional_neural_networks.ipynb
src/: __init__.py  evaluation_utils.py
tests/: test_basic_functionality.py  test_improved_utils.py
utils/: __init__.py  data_utils.py  evaluation_utils.py  plot_utils.py  scraping_utils.py
